# sensor-api

./: README.md  build.sh
frontend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
frontend/src/components/: ComfortScore.module.css  ComfortScore.tsx  Dashboard.module.css  Dashboard.tsx  MetricCard.module.css  MetricCard.tsx  TemperatureCard.module.css  TemperatureCard.tsx
frontend/src/types/: sensor.ts
infrastructure/: .terraform.lock.hcl  api_gateway.tf  dynamodb.tf  iam.tf  lambda.tf  outputs.tf  variables.tf
lambda/: Cargo.toml
lambda/cleanup_old/: Cargo.toml
lambda/cleanup_old/src/: main.rs
lambda/get_readings/: Cargo.toml
lambda/get_readings/src/: main.rs
lambda/submit_reading/: Cargo.toml
lambda/submit_reading/src/: main.rs
