[workspace]
members = [
    "submit_reading",
    "get_readings",
    "cleanup_old"
]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws_lambda_events = "0.17.0"
lambda_runtime = "0.14.3"
aws-sdk-dynamodb = "1.36"
aws-config = "1.5"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
